--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "peertube-plugin-quickstart",
-  "description": "PeerTube plugin quickstart",
-  "version": "0.0.4",
-  "author": "Chocobozzz",
-  "bugs": "https://framagit.org/framasoft/peertube/peertube-plugin-quickstart/issues",
+  "name": "peertube-plugin-podcast2",
+  "description": "PeerTube plugin for podcast support",
+  "version": "0.0.1",
+  "author": "DHK2",
+  "bugs": "https://github.com/dhk2/peertube-plugin-podcast2/issues",
   "clientScripts": [
     {
       "script": "dist/common-client-plugin.js",
@@ -16,12 +16,13 @@
     "assets/style.css"
   ],
   "engine": {
-    "peertube": ">=1.3.0"
+    "peertube": ">=5.1.0"
   },
-  "homepage": "https://framagit.org/framasoft/peertube/peertube-plugin-quickstart",
+  "homepage": "https://github.com/dhk2/peertube-plugin-podcast2",
   "keywords": [
     "peertube",
-    "plugin"
+    "plugin",
+    "podcast"
   ],
   "library": "./main.js",
   "scripts": {
