--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "peertube-plugin-podcast2",
-  "description": "PeerTube plugin for podcast support",
-  "version": "0.1.7",
+  "name": "peertube-plugin-btrss",
+  "description": "PeerTube plugin for Bit Torrent RSS generation",
+  "version": "0.0.0",
   "author": "DHK2",
-  "bugs": "https://github.com/dhk2/peertube-plugin-podcast2/issues",
+  "bugs": "https://github.com/dhk2/peertube-plugin-btrss/issues",
   "clientScripts": [
     {
       "script": "dist/common-client-plugin.js",
@@ -18,11 +18,12 @@
   "engine": {
     "peertube": ">=5.1.0"
   },
-  "homepage": "https://github.com/dhk2/peertube-plugin-podcast2",
+  "homepage": "https://github.com/dhk2/peertube-plugin-btrss",
   "keywords": [
     "peertube",
     "plugin",
-    "podcast"
+    "torrent",
+    "rss"
   ],
   "library": "./main.js",
   "scripts": {
@@ -39,13 +40,7 @@
     "esbuild": "^0.14.36"
   },
   "dependencies": {
-    "axios": "^1.6.2",
     "image-data-uri": "^2.0.1",
-    "nodejs-file-downloader": "^4.12.1",
-    "rss-parser": "^3.13.0",
-    "tiny-json-http": "^7.5.1",
-    "uuidv5": "^1.0.0",
-    "yt-dlp-wrap": "^2.3.12",
-    "yt-info": "^0.1.3"
+    "nodejs-file-downloader": "^4.12.1"
   }
 }
